samples/_failures_safe/1761201000_b5d72d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f9acd16.c: In function ‘process_data’:
./samples/SAFE/__tmp_3f9acd16.c:171:5: error: expected identifier at end of input
  171 |     pc->
      |     ^~
./samples/SAFE/__tmp_3f9acd16.c:171:5: error: expected declaration or statement at end of input
